// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image - Snapshots > matches snapshot with JPG image 1`] = `
<img
  alt="JPG photo"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/photo.jpg"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with PNG image 1`] = `
<img
  alt="PNG graphic"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/graphic.png"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with SVG image 1`] = `
<img
  alt="SVG icon"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/icon.svg"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with WebP image 1`] = `
<img
  alt="WebP image"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/modern.webp"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with custom className 1`] = `
<img
  alt="Image"
  class="h-auto max-w-full rounded-full border-2"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/image.jpg"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with data-testid prop 1`] = `
<img
  alt="Image"
  class="h-auto max-w-full"
  data-nimg="1"
  data-testid="custom-test-id"
  decoding="async"
  height="600"
  loading="lazy"
  src="/image.jpg"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with id prop 1`] = `
<img
  alt="Image"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  id="hero-image"
  loading="lazy"
  src="/image.jpg"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with loading attribute 1`] = `
<img
  alt="Lazy loaded"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/lazy.jpg"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with multiple custom attributes 1`] = `
<img
  alt="Complex image"
  class="h-auto max-w-full rounded-lg shadow-md"
  data-nimg="1"
  decoding="async"
  height="300"
  loading="lazy"
  src="/complex.jpg"
  style="color: transparent;"
  title="A complex image"
  width="400"
/>
`;

exports[`Image - Snapshots > matches snapshot with required props 1`] = `
<img
  alt="Test image"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/image.jpg"
  style="color: transparent;"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with title attribute 1`] = `
<img
  alt="Image"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="600"
  loading="lazy"
  src="/image.jpg"
  style="color: transparent;"
  title="Image tooltip"
  width="800"
/>
`;

exports[`Image - Snapshots > matches snapshot with width and height attributes 1`] = `
<img
  alt="Sized image"
  class="h-auto max-w-full"
  data-nimg="1"
  decoding="async"
  height="200"
  loading="lazy"
  src="/sized.jpg"
  style="color: transparent;"
  width="300"
/>
`;
